--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 </head>
 <body>
   <div class="container">
-    <div class="card">
-      <img class="card-qrcode" src="img/image-qr-code.png" alt="QR Code for Frontend Mentor site">
-      <h2 class="card-title">Improve your front-end skills by building projects</h2>
-      <p class="card-desc">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
+    <img class="qrcode" src="img/image-qr-code.png" alt="QR Code for Frontend Mentor site">
+    <h2 class="title">Improve your front-end skills by building projects</h2>
+    <p class="desc">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
-
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Chris K</a>.
